@@ -92,6 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\UnitTestingLoggingProvider.cs" />
     <Compile Include="SqlLoggingProviderTests.cs" />
+    <Compile Include="TerminatorLoggingProviderTests.cs" />
     <Compile Include="Web\AspNetSqlLoggingProviderTests.cs" />
     <Compile Include="Web\LoggingWebEventProviderTests.cs" />
     <Compile Include="WindowsEventLogLoggingProviderTests.cs" />
